tests/neg/member_assign.scala
class Main {
  var i = 0

  val main = () => {
    i = i + 1
    i
  }
}